# SiFileManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: main.cpp
tools/dependency_builder/: main.py
tools/dependency_builder/builder/: __init__.py  builder_base.py  builder_boost.py  builder_glfw.py  builder_imgui.py
tools/dependency_builder/builder/build_spec/imgui/: CMakeLists.txt  imguiConfig.cmake.in
tools/dependency_builder/environment/: __init__.py  environment_base.py  environment_win.py
